[gd_scene load_steps=4 format=3 uid="uid://1f3hioeimvb6"]

[ext_resource type="FontFile" uid="uid://b32vmci8dumap" path="res://menus/PeaberryDoublespace.ttf" id="1_7ko8j"]
[ext_resource type="Script" path="res://menus/pause_menu.gd" id="2_0eund"]

[sub_resource type="Theme" id="Theme_2l3ja"]
Button/font_sizes/font_size = 30
Button/fonts/font = ExtResource("1_7ko8j")
Label/font_sizes/font_size = 64
Label/fonts/font = ExtResource("1_7ko8j")

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_2l3ja")
script = ExtResource("2_0eund")

[node name="UIPanelContainer" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -184.5
offset_top = -117.5
offset_right = 184.5
offset_bottom = 117.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UIPanelContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="UIPanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
text = "PAUSE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="UIPanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="UIPanelContainer/VBoxContainer/CenterContainer"]
layout_mode = 2

[node name="resume" type="Button" parent="UIPanelContainer/VBoxContainer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "RESUME"

[node name="quit" type="Button" parent="UIPanelContainer/VBoxContainer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "QUIT"

[connection signal="pressed" from="UIPanelContainer/VBoxContainer/CenterContainer/VBoxContainer/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="UIPanelContainer/VBoxContainer/CenterContainer/VBoxContainer/quit" to="." method="_on_quit_pressed"]
